--- a/BankAccountProject/BankAccountProject.csproj
+++ b/BankAccountProject/BankAccountProject.csproj
@@ -45,9 +45,11 @@
   <ItemGroup>
     <Compile Include="AccountClassBase.cs" />
     <Compile Include="CheckingAccount.cs" />
+    <Compile Include="Checkings.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savings.cs" />
     <Compile Include="SavingsAccount.cs" />
   </ItemGroup>
   <ItemGroup>
